<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="horizontal"
	tools:context=".MainActivity">

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="50"
		android:orientation="vertical">
		<TextView
			android:id="@+id/textView1"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
	        android:layout_marginTop="20dp"
			android:textSize="20dp"
			android:text="@string/title_textcolor"/>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="15dp"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/textViewR1"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:layout_marginRight="10dp"
				android:text="15" />
			<SeekBar
				android:id="@+id/seekBarR1"
				android:max="15"
				android:background="#c00"
				android:layout_width="match_parent"
				android:layout_height="30dp"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="15dp"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/textViewG1"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical|right"
				android:layout_marginRight="10dp"
				android:text="15" />
			<SeekBar
				android:id="@+id/seekBarG1"
				android:max="15"
				android:background="#0c0"
				android:layout_width="match_parent"
				android:layout_height="30dp"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="15dp"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/textViewB1"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical|right"
				android:layout_marginRight="10dp"
				android:text="15" />
			<SeekBar
				android:id="@+id/seekBarB1"
				android:max="15"
				android:background="#00c"
				android:layout_width="match_parent"
				android:layout_height="30dp"/>
		</LinearLayout>
		<Button
				android:id="@+id/buttonCancel"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_gravity="right"
				android:layout_marginTop="10dp"
				android:text="@string/button_cancel"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_weight="50"
		android:orientation="vertical">
		<TextView
			android:id="@+id/textView2"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center"
	        android:layout_marginTop="20dp"
			android:textSize="20dp"
			android:text="@string/title_backcolor" />
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="15dp"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/textViewR2"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical"
				android:layout_marginRight="10dp"
				android:text="15" />
			<SeekBar
				android:id="@+id/seekBarR2"
				android:max="15"
				android:background="#c00"
				android:layout_width="match_parent"
				android:layout_height="30dp"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="15dp"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/textViewG2"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical|right"
				android:layout_marginRight="10dp"
				android:text="15" />
			<SeekBar
				android:id="@+id/seekBarG2"
				android:max="15"
				android:background="#0c0"
				android:layout_width="match_parent"
				android:layout_height="30dp"/>
		</LinearLayout>
		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_margin="15dp"
			android:orientation="horizontal">
			<TextView
				android:id="@+id/textViewB2"
				android:layout_width="wrap_content"
				android:layout_height="match_parent"
				android:gravity="center_vertical|right"
				android:layout_marginRight="10dp"
				android:text="15" />
			<SeekBar
				android:id="@+id/seekBarB2"
				android:max="15"
				android:background="#00c"
				android:layout_width="match_parent"
				android:layout_height="30dp"/>
		</LinearLayout>
		<Button
				android:id="@+id/buttonOk"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="10dp"
				android:text="OK"/>
	</LinearLayout>


</LinearLayout>
